<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".view.MainActivity">

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/heading1Textview"
        style="@style/MyTextViewStyleForHeading"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/txtsubheading"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtsubheading"
        style="@style/MyTextViewStyleForSubHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading1Textview" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtadventuregenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_adventure_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        style="@style/MyTextViewStyleForCard"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/adventure"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txthistorygenre" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txthumorgenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_humor_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/humor"
        style="@style/MyTextViewStyleForCard"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtdramagenre" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtpoliticsgenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_politics_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        style="@style/MyTextViewStyleForCard"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/politics"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txthumorgenre" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtdramagenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_domain_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/drama"
        style="@style/MyTextViewStyleForCard"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfictiongenre" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtfictiongenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_fiction_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/grayshade1"
        android:shadowDx="2"
        android:shadowDy="5"
        style="@style/MyTextViewStyleForCard"
        android:shadowRadius="2"
        android:text="@string/fiction"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsubheading" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txthistorygenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_history_24px"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        style="@style/MyTextViewStyleForCard"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/history"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtphilosophygenre" />

    <com.example.ignite.customviews.Heading1Textview
        android:id="@+id/txtphilosophygenre"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@drawable/categorybackground"
        android:drawableLeft="@drawable/ic_philosophy_24px"
        style="@style/MyTextViewStyleForCard"
        android:drawableRight="@drawable/ic_arrow_forward_24px"
        android:gravity="left|center_vertical"
        android:shadowColor="@color/colorAccent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="2"
        android:text="@string/philosophy"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/txthistorygenre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpoliticsgenre" />
</androidx.constraintlayout.widget.ConstraintLayout>